plugins {
	id 'fabric-loom' version '1.9.2'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

archivesBaseName = project.archives_base_name
project.mod_version += "-mc" + project.minecraft_version
version = project.mod_version
group = project.maven_group

configurations {
	my.canBeResolved(true)
	api.extendsFrom(my)
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

//	my("com.github.goxr3plus:java-stream-player:10.0.2") {
//		exclude module: 'junit'
//	}
//	my("com.github.gregtaoo:java-stream-player-forked:f9b448c72f") {
//		exclude module: 'junit'
//	}
	my 'com.google.zxing:core:3.3.0'
	my('com.googlecode.soundlibs:mp3spi:1.9.5.4') {
		exclude group: 'com.googlecode.soundlibs', module: 'tritonus-share'
	}
	my 'org.jflac:jflac-codec:1.5.2'
	my 'com.github.trilarion:vorbis-support:1.1.0'
	my('com.googlecode.soundlibs:tritonus-all:0.3.7.2') {
		exclude group: 'com.googlecode.soundlibs', module: 'tritonus-share'
	}
	my 'net.jthink:jaudiotagger:3.0.1'
//	my 'commons-io:commons-io:2.14.0'
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from {
		configurations.my.collect {
			it.isDirectory() ? it : zipTree(it)
		}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
